EM7345 (mbim): GPS location unavailable
Submitted by bar..@..tor.de
Assigned to ModemManager bug user
Description
The device has an internal GPS/GLONAS revicver, but mmcli don't report only: mmcli --location-status -m /org/freedesktop/ModemManager1/Modem/0 error: modem not enabled yet mmcli -e -m /org/freedesktop/ModemManager1/Modem/0 error: couldn't enable the modem: 'GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: Method Enable is not implemented on interface org.freedesktop.ModemManager1.Modem'
Version: 1.4
Edited by Aleksander Morgado