plugins/sierra/mm-plugin-sierra.c
@@ -25,6 +25,7 @@
 #include "mm-log-object.h"
 #include "mm-plugin-sierra.h"
 #include "mm-broadband-modem.h"
+#include "mm-broadband-modem-xmm.h"
 
 #if defined WITH_QMI
 #include "mm-broadband-modem-qmi.h"
@@ -32,6 +33,7 @@
 
 #if defined WITH_MBIM
 #include "mm-broadband-modem-mbim.h"
+#include "mm-broadband-modem-mbim-xmm.h"
 #endif
 
 G_DEFINE_TYPE (MMPluginSierra, mm_plugin_sierra, MM_TYPE_PLUGIN)
@@ -63,6 +65,14 @@ create_modem (MMPlugin *self,
 
 #if defined WITH_MBIM
     if (mm_port_probe_list_has_mbim_port (probes)) {
+        if (mm_port_probe_list_is_xmm (probes)) {
+            mm_obj_dbg (self, "MBIM-powered XMM-based Sierra modem found...");
+            return MM_BASE_MODEM (mm_broadband_modem_mbim_xmm_new (uid,
+                                                                   drivers,
+                                                                   mm_plugin_get_name (self),
+                                                                   vendor,
+                                                                   product));
+        }
         mm_obj_dbg (self, "MBIM-powered Sierra modem found...");
         return MM_BASE_MODEM (mm_broadband_modem_mbim_new (uid,
                                                            drivers,
@@ -71,6 +81,15 @@ create_modem (MMPlugin *self,
                                                            product));
     }
 #endif
+
+    if (mm_port_probe_list_is_xmm (probes)) {
+        mm_obj_dbg (self, "XMM-based Sierra modem found...");
+        return MM_BASE_MODEM (mm_broadband_modem_xmm_new (uid,
+                                                          drivers,
+                                                          mm_plugin_get_name (self),
+                                                          vendor,
+                                                          product));
+    }
 
     /* Fallback to default modem in the worst case */
     return MM_BASE_MODEM (mm_broadband_modem_new (uid,
@@ -99,6 +118,7 @@ mm_plugin_create (void)
                       MM_PLUGIN_ALLOWED_QCDM,       TRUE,
                       MM_PLUGIN_ALLOWED_QMI,        TRUE,
                       MM_PLUGIN_ALLOWED_MBIM,       TRUE,
+                      MM_PLUGIN_XMM_PROBE,          TRUE,
                       NULL));
 }
 
